# wingmate-rs

./: .gitignore  Cargo.toml  LICENSE  coba.txt
.devcontainer/: devcontainer.json
docker/: Dockerfile
docker/dev/: Dockerfile
docker/dev/etc/wingmate/services/: one  three.sh
docker/etc/wingmate/: crontab
src/: init.rs  main.rs
src/init/: config.rs  daemon.rs  error.rs  sighandler.rs
src/init/daemon/: sighandler.rs  starter.rs  waiter.rs
src/init/daemon/starter/: time_calc.rs
