[package]
name = "wingmate-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dummy"
path = "src/bin/test-helper/dummy.rs"

[[bin]]
name = "spawner"
path = "src/bin/test-helper/spawner.rs"


[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
nix = {version = "0.27.1", features = ["process", "signal", "fs"]}
regex = "1.10.2"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["local-offset"]}
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
