[package]
name = "wingmate-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wmtest-helper-dummy"
path = "src/bin/test-helper/dummy.rs"

[[bin]]
name = "wmtest-helper-spawner"
path = "src/bin/test-helper/spawner.rs"

[[bin]]
name = "wmtest-helper-log"
path = "src/bin/test-helper/log.rs"


[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["std"]}
nix = { version = "0.27.1", features = ["process", "signal", "fs"]}
rand = "0.8.5"
regex = "1.10.2"
simplelog = "0.12.1"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["local-offset", "macros"]}
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
